[project]
name = "quanstants"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matterhorn103", email = "matterhorn103@proton.me" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "coverage>=7.4.4",
    "uncertainties>=3.1.7",
    "sigfig>=1.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quanstants"]

[tool.ruff]
extend-exclude = ["data"]
