[project]
name = "quanstants"
version = "0.1.0"
description = "Intuitive and unastonishing physical quantities, units, constants, and uncertainties in Python"
authors = [
    { name = "Matthew J. Milner", email = "matterhorn103@proton.me" }
]
dependencies = [
    "platformdirs>=4.2.1",
    "tomli-w>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/matterhorn103/quanstants"
Issues = "https://github.com/matterhorn103/quanstants/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.1.1",
    "coverage>=7.4.4",
    "uncertainties>=3.1.7",
    "sigfig>=1.3.3",
    "twine>=5.0.0",
    "pint>=0.23",
    "polars>=0.20.31",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "astropy>=6.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quanstants"]

[tool.ruff]
extend-exclude = ["data"]
